# benchmarks

./: README.md  pyproject.toml
src/: httpx_aiohhtp_pyreqwest.py  msgspec_pydantic_orjson.py
