[project]
name = "benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "httpx>=0.28.1",
    "msgspec>=0.20.0",
    "orjson>=3.11.5",
    "pydantic>=2.12.5",
    "pyreqwest>=0.5.1",
    "ty>=0.0.5",
]
